unpackaged/main/default/objects/project_cloud__KPI__c/project_cloud__KPI__c.object-meta.xml
<CustomObject>
    <description>Object for capturing KPI information.</description>
    <label>KPI</label>
    <nameField>
        <displayFormat>KPI-{00000000}</displayFormat>
        <label>KPI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>