unpackaged/main/default/objects/project_cloud__KPI__c/fields/project_cloud__Baseline__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Baseline__c</fullName>
    <inlineHelpText>The baseline for the KPI.</inlineHelpText>
    <label>Baseline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>