unpackaged/main/default/objects/project_cloud__KPI__c/fields/project_cloud__KPI_Area__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__KPI_Area__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Defines the KPI Area that this KPI is related to.</inlineHelpText>
    <label>KPI Area</label>
    <referenceTo>project_cloud__KPI_Area__c</referenceTo>
    <relationshipLabel>KPIs</relationshipLabel>
    <relationshipName>KPIs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>