unpackaged/main/default/objects/project_cloud__KPI__c/fields/project_cloud__Project__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Project that this KPI is related to.</inlineHelpText>
    <label>Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>KPIs</relationshipLabel>
    <relationshipName>KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>